v1.253.0: the baseline advances — JDK 25 LTS + OpenJFX 26 (#382)
* v1.253.0: the baseline advances — JDK 25 LTS + OpenJFX 26

- Bundled runtime → JDK 25 LTS; Browser engine → OpenJFX 26.0.2.
  CI + 3 release jlink jobs + windows check on 25; fresh sha256 pins
  for all four platform jmods; ui pom + NOTICE via the four-home gate
- maven.compiler.target STAYS 21 on purpose: the update center ships
  modules not runtimes, so class-69 bytecode would brick an in-app
  update on an install still running bundled Java 21 — law recorded
  at the property
- Proven: mvn verify GREEN on JDK 25 across all ten modules incl.
  SpotBugs/find-sec-bugs/JaCoCo; workflow-identical full-dir jlink
  clean; app boots zero-SEVERE; browser gauntlet green on FX 26
  (https, plain-http h2c loader, DevTools DOM)
- Ledger 74 closed; dossier keeps the evidence trail

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* fix: killTreeAndWait must speak the caller's language, not the handle's

The verdict asked ProcessHandle.isAlive() for every node — but a
handle can report dead while the caller's Process.isAlive() is still
true (exit status unreaped). So the API could answer "confirmed dead"
about a process the caller could still see running, which is exactly
what its callers must not believe: they delete the files that process
was holding open (JsDebugServer.stop → Chrome profile dir).

Now: wait on the direct child via Process.waitFor() (forces the reap),
and the verdict is !p.isAlive() && descendants all dead.

Caught by the windows-latest lane on the JDK 25 baseline move — four
years of Java-21 CI never surfaced it.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

* docs: the six missing CHANGELOG entries (v1.248–v1.253), written in arrears

A scripted CHANGELOG insert during v1.248.0 failed its anchor
assertion inside a batched shell block. Bash continued, the traceback
scrolled past under a tail, and every later entry anchored on the one
that was never written — so six shipped 